--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<footer class="footer">
   <div class="links">
     <div>Happy Coding!</div>
     <div>
@@ -7,4 +7,4 @@
     </div>
   </div>
   <div class="copyright">Copyright &copy; 2020 M2D2 Enterprises</div>
-</div>
+</footer>
