--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
-  <div class="header">
-    <div class="app-name mat-display-1">
-      <img class="logo" src="assets/img/logo.svg">
+  <header class="header">
+    <h1 class="app-name mat-display-1">
+      <img class="logo" src="assets/img/logo.svg" alt="Logo Image">
       Build For Accessibility Using Angular
-    </div>
-  </div>
+    </h1>
+  </header>
