--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -15,7 +15,7 @@ $light-primary-text: #fbfbfc;
 
 $customPurple: mat-palette($mat-deep-purple);
 
-$customGreen: mat-palette($mat-light-green);
+$customGreen: mat-palette($mat-pink);
 
 $primary: #5D5D81;
 $primary2:rgb(246, 246, 255);
