--- a/src/app/components/completed/completed.component.html
+++ b/src/app/components/completed/completed.component.html
@@ -1,14 +1,14 @@
 <mat-card class="completed">
-  <div class="mat-title">Completed List</div>
+  <h2 class="mat-title" id="title">Completed List</h2>
   <mat-card-content *ngIf="loaded else loading">
-    <mat-list *ngIf="todoList?.length else empty">
-      <mat-list-item *ngFor="let todo of todoList; let i = index">
+    <mat-list *ngIf="todoList?.length else empty" role="list" aria-labelledby="title">
+      <mat-list-item *ngFor="let todo of todoList; let i = index" role="listitem">
         <div class="item">
-          <span [id]="item">{{ todo.item }}</span>
-          <button type="button" mat-icon-button type="button" color="primary" (click)="undo(todo.id)">
+          <span  [id]="'item' + i">{{ todo.item }}</span>
+          <button type="button" mat-icon-button type="button" color="primary" (click)="undo(todo.id)" aria-label="mark as uncompleted" [attr.aria-describedby]="'item' + i">
             <mat-icon>undo</mat-icon>
           </button>
-          <button type="button" mat-icon-button type="button" color="warn" (click)="remove(todo.id)">
+          <button type="button" mat-icon-button type="button" color="warn" (click)="remove(todo.id)" aria-label="delete" [attr.aria-describedby]="'item' + i">
             <mat-icon>delete</mat-icon>
           </button>
         </div>
@@ -22,7 +22,7 @@
 
 <ng-template #empty>
   <div class="empty">
-    <img src="assets/img/completed-no-data.svg">
+    <img src="assets/img/completed-no-data.svg" alt="Image for no completed tasks">
     <p>No completed tasks yet. Check a task in the todo list to mark it as complete.</p>
   </div>
 </ng-template>
